--- a/News Websites Real Time Data Analysis/README
+++ b/News Websites Real Time Data Analysis/README
@@ -1,1 +1,2 @@
-
+•	Showed the trending topics around world, determined their sentiment analysis by compared real time data on 10 sites
+•	Lexicon files were made to do better preprocessing and analysis
